# crawl4ai-local-model-embedding

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  crawled_pages.sql  pyproject.toml  test_css_markdown.py  test_embeddings.py  test_google_api.py
knowledge_graphs/: ai_hallucination_detector.py  ai_script_analyzer.py  hallucination_reporter.py  knowledge_graph_validator.py  parse_repo_into_neo4j.py  query_knowledge_graph.py  test_script.py
src/: crawl4ai_mcp.py  google_ai_api.py  local_embeddings.py  utils.py
